prevent label wrapping and adjust label widths for save

--- a/src/global.css
+++ b/src/global.css
@@ -100,6 +100,7 @@ body {
         flex: 0 0 auto;
         text-transform: uppercase;
         margin: 3px 0;
+        white-space: nowrap;
     }
 
     .special-label {
