--- a/src/info-body.css
+++ b/src/info-body.css
@@ -147,7 +147,7 @@
 
     #character-mind {
         .input-row-left-column .input-row label {
-            flex-basis: 12.5ch;
+            flex-basis: 11.5ch;
         }
         .input-row-right-column .input-row label {
             flex-basis: 8ch;
@@ -200,10 +200,10 @@
 
     #character-priorities {
         .input-row-left-column .input-row label {
-            flex-basis: 7ch;
+            flex-basis: 6.5ch;
         }
         .input-row-right-column .input-row label {
-            flex-basis: 16ch;
+            flex-basis: 15.5ch;
         }
     }
 }
